# fantasy-coach

./: .dockerignore  .env.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  firebase.json  firestore.rules  pyproject.toml
.github/workflows/: add-to-project.yml  ci.yml  deploy.yml  web-ci.yml  web-deploy.yml
artifacts/: best_params.json
assets/og/: team_colours.json
data/: venues.csv
deploy/: log-config.json
docs/: cost.md  data-model.md  deploy.md  model.md  nrl-endpoints.md  secrets.md  spa.md
docs/audits/: player_strength_diff.md
docs/samples/: draw-round-8-2026.json
reports/: evaluation.md
scripts/: audit_player_strength_diff.py  backtest_r8_2026.py  eval_all_predictors.py  migrate_sqlite_to_firestore.py  sweep_position_weights.py
src/fantasy_coach/: __main__.py  app.py  auth.py  backfill.py  config.py  drift.py  feature_engineering.py  features.py  github_issue.py  logging_config.py  match_sync.py  notifications.py  og_image.py  predictions.py  representative.py  retrain.py  scraper.py  scraper_cache.py  simulation.py  team_lists.py  travel.py  weather.py  weather_forecast.py
src/fantasy_coach/bookmaker/: __init__.py  lines.py  predictor.py  team_names.py
src/fantasy_coach/commentary/: __init__.py  cache.py  client.py  preview.py
src/fantasy_coach/evaluation/: __init__.py  harness.py  metrics.py  predictors.py  profit.py  report.py
src/fantasy_coach/models/: bivariate_poisson.py  calibration.py  conformal.py  elo.py  elo_mov.py  ensemble.py  explainability.py  glicko2.py  loader.py  logistic.py  multitask.py  ood.py  player_ratings.py  promotion.py  rating_sweep.py  skellam.py  xgboost_model.py
src/fantasy_coach/storage/: __init__.py  firestore.py  repository.py  schema.sql  sqlite.py  team_list.py
tests/: test_accuracy.py  test_auth.py  test_backfill.py  test_baseline_metrics.py  test_bivariate_poisson.py  test_bookmaker.py  test_calibration.py  test_commentary_preview.py  test_conformal.py  test_contribution_detail.py  test_copy_matches_cli.py  test_cors.py  test_dashboard.py  test_drift.py  test_elo.py  test_elo_mov.py  test_ensemble.py  test_evaluation.py  test_explainability.py  test_feature_engineering.py  test_features.py  test_features_regression.py  test_gemini_cache.py  test_gemini_client.py  test_github_issue.py  test_glicko2.py  test_healthz.py  test_key_absence.py  test_logging_config.py  test_logistic.py  test_match_sync.py  test_multitask.py  test_odds_feature.py  test_og_image.py  test_ood.py  test_opponent_adjusted_form.py  test_player_ratings.py  test_precompute_cli.py  test_predictions.py  test_profit.py  (+19 more)
tests/fixtures/: baseline-nrl.db  match-2024-finals-week-1-game-1.json  match-2024-rd1-sea-eagles-v-rabbitohs.json  match-2026-rd8-wests-tigers-v-raiders.json
tests/fixtures/extracted/: extracted-2024-finals-week-1-game-1.json  extracted-2024-rd1-sea-eagles-v-rabbitohs.json  extracted-2026-rd8-wests-tigers-v-raiders.json
web/: .env.example  .gitignore  index.html  lighthouserc.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: firebase-messaging-sw.js
web/src/: App.tsx  api.ts  auth.tsx  features.ts  firebase.ts  groups.ts  main.tsx  notifications.ts  prefs.ts  search.ts  styles.css  tips.ts  types.ts
web/src/components/: AccuracyFilters.tsx  AccuracyTrendChart.tsx  AuthButton.tsx  FilterBar.tsx  GroupCard.tsx  InstallPrompt.tsx  MatchCard.tsx  NotificationPrompt.tsx  OfflineBanner.tsx  RoundSelector.tsx  SearchBar.tsx  ShareButton.tsx  SignInRequired.tsx  TeamFormChart.tsx  TeamFormSparkline.tsx  ThemeToggle.tsx  TipEntry.tsx
web/src/routes/: Accuracy.tsx  GroupDetail.tsx  Groups.tsx  Home.tsx  Ladder.tsx  Leaderboard.tsx  MatchDetail.tsx  Round.tsx  Scoreboard.tsx  Team.tsx  TeamProfile.tsx
